After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756952 - giomodule: return a copy of module name
giomodule: return a copy of module name
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-10-22 08:39 UTC by Víctor Manuel Jáquez Leal
Modified: 2015-10-22 09:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
giomodule: return a copy of module name (829 bytes, patch)
2015-10-22 08:39 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description Víctor Manuel Jáquez Leal 2015-10-22 08:39:01 UTC
This is a regression from commit 6dedc0.

The clients expect to free the received module name, so the function
must return a copy.
Comment 1 Víctor Manuel Jáquez Leal 2015-10-22 08:39:05 UTC
Created attachment 313845 [details] [review]
giomodule: return a copy of module name
Comment 2 Ignacio Casal Quinteiro (nacho) 2015-10-22 09:07:35 UTC
Review of attachment 313845 [details] [review]:

Looks good. I missed it indeed in my patch. Thanks
Comment 3 Ignacio Casal Quinteiro (nacho) 2015-10-22 09:22:17 UTC
Attachment 313845 [details] pushed as 3bb8294 - giomodule: return a copy of module name